IVYPORTAL-7318: Various or urgent requests in IVYPORTAL S173 - Fixed bug: Text of related tasks in case details not display properly on IE11

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3231,6 +3231,7 @@ _:-ms-input-placeholder, :root .case-details > * {
 }
 
 .case-details-data-2nd-column > * {
+  display: inline-block;
   font-size: 1.2rem !important;
 }
 .case-details-data-2nd-column > *:not(.case-details-priority):not(form):not(div) {
